chore: add mikro cli

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-
-    "compilerOptions": {
-      "outDir": "./dist",
-      "rootDir": "./src"
-    },
-    "include": ["src/**/*.ts"]
+    "noFallthroughCasesInSwitch": false
   }
 }
