--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mikro-orm/cli": "^6.3.2",
     "@mikro-orm/core": "^6.3.2",
     "@mikro-orm/migrations": "^6.3.2",
     "@mikro-orm/nestjs": "^6.0.2",
@@ -28,6 +29,7 @@
     "@mikro-orm/seeder": "^6.3.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "dotenv": "^16.4.5",
     "fast-food-api-nest": "file:",
